fix: make the toolbar row invisible after hiding all the toolbar items http://bugs.activestate.com/show_bug.cgi?id=85895
(integrated from komodo (trunk) change 39103 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@4422 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/komodo.css
+++ b/src/chrome/komodo/skin/komodo.css
@@ -60,10 +60,6 @@
 toolbar[printpreview="true"] {
   -moz-binding: url("chrome://global/content/printPreviewBindings.xml#printpreviewtoolbar");
 }
-/* don't show empty toolbars */
-#main-toolboxrow > toolbar:empty {
-  display: none;
-}
 
 #main-toolboxrow {
   overflow: hidden;
